# EXTERNAL-detectron2

./: .pre-commit-config.yaml  pyproject.toml  setup.py
detectron2/data/datasets/: coco_panoptic.py
