[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch",
    "nvidia-curand-cu11",
    "nvidia-cufft-cu11",
    "nvidia-cublas-cu11",
    "nvidia-cuda-runtime-cu11",
    "nvidia-nvtx-cu11",
    "nvidia-cudnn-cu11",
    "nvidia-cuda-cupti-cu11",
    ]
build-backend = "setuptools.build_meta:__legacy__"