[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch >= 1.8, < 2.0",
    "nvidia-curand-cu11;platform_system=='Linux'",
    "nvidia-cufft-cu11;platform_system=='Linux'",
    "nvidia-cublas-cu11;platform_system=='Linux'",
    "nvidia-cuda-runtime-cu11;platform_system=='Linux'",
    "nvidia-nvtx-cu11;platform_system=='Linux'",
    "nvidia-cudnn-cu11;platform_system=='Linux'",
    "nvidia-cuda-cupti-cu11==11.7.101;platform_system=='Linux'",
    "nvidia-cusparse-cu11;platform_system=='Linux'",
    "nvidia-nccl-cu11;platform_system=='Linux'",
    ]
build-backend = "setuptools.build_meta:__legacy__"
